--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,31 @@ img {
 /************************************************
      SOLUZIONE RESPONSIVE
   ************************************************/
+
+/* senza bonus sarebbe 768px  */
+@media screen and (max-width: 1140px) {
+    .container {
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    .row {
+        /* oppure flex-wrap oppure flex-direction */
+        display: block;
+    }
+
+    .lessons .col,
+    .steps .col,
+    .why-us .col {
+        /* oppure 100% */
+        width: unset;
+        margin-bottom: 4rem;
+    }
+
+    .steps .col:last-child {
+        /* oppure 0 */
+        margin-bottom: unset;
+    }
+}
